meta: Don't do sRGB encode for framebuffer blits on sRGB-enabled framebuffers.

Fixes fbo-srgb-blit.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=35373
Reviewed-by: Brian Paul <brianp@vmware.com>